# internal/core/dto/review.go
@@ -1,8 +1,7 @@
 package dto
 
 type CreateReviewRequest struct {
-	WorkerID string  `json:"worker_id"`
-	UserID   string  `json:"user_id"`
+	WorkerID string  `json:"workerID"`
 	Rating   float64 `json:"rating"`
 	Review   string  `json:"review"`
 }
